Fixed some client layout issues with window titles
git-svn-id: https://svn.cs.ru.nl/repos/iTask-system/trunk@3130 63da3aa8-80fd-4f01-9db8-e6ea747a3da2

--- a/Client/itwc-theme-gray/itwc-theme.scss
+++ b/Client/itwc-theme-gray/itwc-theme.scss
@@ -114,14 +114,37 @@ body {
     background-color: $canvas-base-color;
     border: 1px solid $borders-color;
 }
-.panel-header, .window-header {
+.header {
+    color: $header-text-color;
     background-color: $header-base-color;
-
     background: -moz-linear-gradient(top, ($header-base-color + #222) 0%, $header-base-color 100%);
     background: -webkit-linear-gradient(top, ($header-base-color + #222) 0%, $header-base-color 100%);
     font-weight: bold;
     font-size: 11px;
     padding: 4px 10px 6px 8px;
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+}
+.header a.close {
+    float: right;
+    color: $header-text-color;
+    display: inline-block;
+    position: relative;
+    margin: 0;
+    top: 0px;
+    font-weight: bold;
+    font-size: 8px;
+    line-height: 8px;
+    background: $header-base-color + #222;
+    border: 1px solid $header-text-color;
+    border-radius: 2px;
+    padding: 0 4px 2px 4px;
+    text-decoration: none;
+}
+.inner {
+    flex: 1;
+    -webkit-flex: 1;
+    overflow: auto;
 }
 .framed {
     border: 1px solid $borders-color;
@@ -456,10 +479,14 @@ body {
     border-top: 1px solid #efefef;
     border-bottom: 1px solid #ddd;
 }
+.vsplitter, .hsplitter {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+    align-self: stretch;
+}
 .vsplitter {
     height: 5px;
     cursor: row-resize;
-    align-self: stretch;
 }
 .hsplitter {
     width: 5px;
@@ -480,23 +507,7 @@ body {
     color: $canvas-text-color;
     background-color: $canvas-base-color;
     border: 1px solid $borders-color;
-    overflow: auto;
     box-shadow: 0 5px 5px rgba(0,0,0,0.5);
     border-radius: 5px;
 }
-.window-header a.windowclose {
-    float: right;
-    color: $header-text-color;
-    display: inline-block;
-    position: relative;
-    margin: 0;
-    top: 0px;
-    font-weight: bold;
-    font-size: 8px;
-    line-height: 8px;
-    background: $header-base-color + #222;
-    border: 1px solid $header-text-color;
-    border-radius: 2px;
-    padding: 0 4px 2px 4px;
-    text-decoration: none;
-}
+
